--- a/app/src/main/res/layout/activity_doctors_list_item.xml
+++ b/app/src/main/res/layout/activity_doctors_list_item.xml
@@ -2,9 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:background="#fff"
-    >
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
