--- a/app/src/main/res/layout/activity_main_card.xml
+++ b/app/src/main/res/layout/activity_main_card.xml
@@ -15,15 +15,14 @@
         android:layout_marginTop="0dp"
         card_view:contentPadding="0dp"
         card_view:cardCornerRadius="0dp"
-        android:alpha="0.9"
+        android:alpha="0.95"
         card_view:cardPreventCornerOverlap="false"
         android:background="#fff">
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
-            >
+            android:padding="0dp">
 
             <ImageView
                 android:layout_width="70dp"
@@ -34,7 +33,7 @@
             <TextView
                 android:layout_width="35dp"
                 android:layout_height="70dp"
-                android:alpha="0.5"
+                android:alpha="0.9"
                 android:layout_alignParentRight="true"
                 android:id="@+id/mainBaseline"
                 android:background="#990000" />
