--- a/app/src/main/res/layout/activity_places_category.xml
+++ b/app/src/main/res/layout/activity_places_category.xml
@@ -29,7 +29,8 @@
     <ListView
         android:id="@+id/list"
         android:alpha="0.9"
-        android:layout_height="fill_parent"
+        android:background="@drawable/listview_states_color"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent">
     </ListView>
 
