--- a/app/src/main/res/menu/menu_places_category.xml
+++ b/app/src/main/res/menu/menu_places_category.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="vb.refugeehelpvb.places.PlacesCategoryActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/help"
         android:title="Help"
         android:icon="@drawable/ic_help"
         android:orderInCategory="100"
