--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -8,6 +8,7 @@
     <color name="orange">#FFBB33</color>
     <color name="label">#666</color>
     <color name="green">#00b200</color>
+    <color name="transparent">#80ffffff</color>
 
     <color name="ActionBarSettings">#666</color>
 
