--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <!--<item name="android:actionOverflowButtonStyle">@style/ActionBarMainMenu</item>
         <item name="actionOverflowButtonStyle">@style/ActionBarMainMenu</item>-->
     </style>
+
     <style name="ActionBarMain" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/MainPrimary</item>
         <item name="background">@color/MainPrimary</item>
@@ -26,6 +27,7 @@
         <item name="actionBarStyle">@style/ActionBarSettings</item>
         <item name="android:actionBarStyle">@style/ActionBarSettings</item>
     </style>
+
     <style name="ActionBarSettings" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/ActionBarSettings</item>
         <item name="background">@color/ActionBarSettings</item>
@@ -43,6 +45,7 @@
         <item name="actionBarStyle">@style/ActionBarDoctors</item>
         <item name="android:actionBarStyle">@style/ActionBarDoctors</item>
     </style>
+
     <style name="ActionBarDoctors" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/DoctorsPrimary</item>
         <item name="background">@color/DoctorsPrimary</item>
@@ -60,6 +63,7 @@
         <item name="actionBarStyle">@style/ActionBarPlaces</item>
         <item name="android:actionBarStyle">@style/ActionBarPlaces</item>
     </style>
+
     <style name="ActionBarPlaces" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/PlacesPrimary</item>
         <item name="background">@color/PlacesPrimary</item>
@@ -77,6 +81,7 @@
         <item name="actionBarStyle">@style/ActionBarPublicTransport</item>
         <item name="android:actionBarStyle">@style/ActionBarPublicTransport</item>
     </style>
+
     <style name="ActionBarPublicTransport" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/PublicTransportPrimary</item>
         <item name="background">@color/PublicTransportPrimary</item>
@@ -94,6 +99,7 @@
         <item name="actionBarStyle">@style/ActionBarCalendar</item>
         <item name="android:actionBarStyle">@style/ActionBarCalendar</item>
     </style>
+
     <style name="ActionBarCalendar" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/CalendarPrimary</item>
         <item name="background">@color/CalendarPrimary</item>
@@ -111,6 +117,7 @@
         <item name="actionBarStyle">@style/ActionBarEmergency</item>
         <item name="android:actionBarStyle">@style/ActionBarEmergency</item>
     </style>
+
     <style name="ActionBarEmergency" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/EmergencyPrimary</item>
         <item name="background">@color/EmergencyPrimary</item>
@@ -129,5 +136,14 @@
     <style name="ActionBarBlack" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">#000</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
