--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblViolence"
-            android:text="Polizei"
+            android:text="@string/violence_crime"
             android:textColor="#000"
             android:textSize="22dp"
             android:layout_alignParentLeft="true" />
