--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -24,7 +24,9 @@
         android:layout_above="@id/startupLogo"
         android:textSize="30dp"
         android:textColor="@color/white"
-        android:text="مرحبا" />
+        android:text="مرحبا"
+        android:background="#84000000"
+        android:padding="3dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,8 +35,11 @@
         android:layout_marginBottom="10dp"
         android:textSize="30dp"
         android:layout_above="@id/startupTitleArab"
-        android:textColor="@color/white"
-        android:text="@string/app_name" />
+        android:textColor="#ffffff"
+        android:text="@string/app_name"
+        android:textStyle="bold"
+        android:background="#84000000"
+        android:padding="3dp" />
 
     <TextView
         android:id="@+id/startupLoading"
