--- a/app/src/main/res/layout/activity_main_card.xml
+++ b/app/src/main/res/layout/activity_main_card.xml
@@ -25,8 +25,9 @@
             android:padding="0dp">
 
             <ImageView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:padding="3dp"
                 android:scaleType="fitXY"
                 android:id="@+id/mainPhoto"/>
 
