--- a/app/src/main/res/layout/activity_main_card.xml
+++ b/app/src/main/res/layout/activity_main_card.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="70dp"
     android:orientation="vertical"
     android:layout_marginTop="5dp"
     android:layout_marginLeft="5dp"
@@ -10,7 +10,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_marginTop="0dp"
         card_view:contentPadding="0dp"
@@ -46,9 +46,9 @@
                 android:layout_alignBaseline="@+id/mainPhoto"
                 android:layout_centerVertical="true"
                 android:paddingRight="45dp"
-                android:paddingLeft="0dp"
+                android:paddingLeft="5dp"
                 android:alpha="1"
-                android:textSize="@dimen/abc_text_size_headline_material"
+                android:textSize="20sp"
                 android:textColor="#000"
                 android:text="Test"
                 android:id="@+id/mainCategory"
