--- a/app/src/main/res/layout/activity_places_details.xml
+++ b/app/src/main/res/layout/activity_places_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layoutPlacesDetails"
     android:layout_width="fill_parent"
     android:orientation="vertical"
@@ -185,5 +186,14 @@
         </RelativeLayout>
 
     </ScrollView>
+
+    <com.mapbox.mapboxsdk.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        mapbox:access_token="pk.eyJ1IjoibWtheTg5IiwiYSI6ImNpdG92MDM0YjAwMWIyem55dmd0Mms0eGIifQ.ZIZ0Cq_lzvB6yMDjK-XOdQ"
+        mapbox:style_url="mapbox://styles/mapbox/streets-v9" />
+
 
 </LinearLayout>
