--- a/app/src/main/res/layout/activity_public_transport.xml
+++ b/app/src/main/res/layout/activity_public_transport.xml
@@ -1,12 +1,30 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="vb.helloRabenau.publictransport.PublicTransportActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="5dp"
+    android:orientation="vertical" >
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/Linie520"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Linie 520"
+        android:textSize="55sp"
+        android:clickable="true"/>
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/Linie55"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Linie 55"
+        android:textSize="55sp"
+        android:clickable="true"/>
+
+    <TextView
+        android:id="@+id/LinieMR86"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Linie MR-86"
+        android:textSize="55sp"
+        android:clickable="true"/>
+</LinearLayout>
