--- a/app/src/main/res/menu/menu_places_category.xml
+++ b/app/src/main/res/menu/menu_places_category.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/help"
         android:title="Help"
-        android:icon="@drawable/ic_help"
+        android:icon="@drawable/ic_info_white_48dp"
         android:orderInCategory="100"
         app:showAsAction="always" />
 </menu>
